fixes alignment

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 /** @format */
 
 // Colors
-$color-theme: #037fff;
+$color-theme: #0b670b;
 $color-secondary: #ffffff;
 $color-body: #a4acc4;
 $color-heading: #ffffff;
