--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -22,7 +22,7 @@
   }
 
   &-content{
-    text-align: center;
+    text-align: justify;
     padding: 50px 80px;
 
     h1{
@@ -33,8 +33,6 @@
       margin-top: 15px;
       font-size: 1.25rem;
       line-height: 2rem;
-      text-align: center;
-      display: block;
     }
 
     .mi-socialicons{
@@ -61,8 +59,6 @@
       p{
         font-size: 1.15rem;
         line-height: 1.75rem;
-        text-align: center;
-        display: block;
       }
     }
   }
@@ -74,8 +70,6 @@
       p{
         font-size: 1.08rem;
         line-height: 1.55rem;
-        text-align: center;
-        display: block;
       }
     }
   }
